<resources>
    <string name="app_name">Cali Tour</string>
    <string name="operadores_turisticos">Operadores Turisticos</string>
    <string name="hoteles">Hoteles</string>
    <string name="sitios_tur_sticos">Sitios turísticos</string>
    <string name="adicionar">Adicionar</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">Borrar</string>
    <string name="visualizar">Visualizar</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="sitio_web">Sitio Web</string>
    <string name="direcci_n">Dirección</string>
    <string name="nombre">Nombre</string>
    <string name="telefono_fijo">Telefono Fijo</string>
    <string name="celular">celular</string>
   <string name="agregar">Agregar</string>
    <string name="regresar">Regresar</string>

</resources>
