<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtBuscar"
            android:hint="Buscar"/>


        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listBuscar"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="false"/>

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Editar...."
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nombre" />

        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/direcci_n" />

        <EditText
            android:id="@+id/txtSitioWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/sitio_web" />
        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/correo_electronico" />
        <EditText
            android:id="@+id/txtTelefonoFijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/telefono_fijo" />

        <EditText
            android:id="@+id/txtCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/celular" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnModificar"
            android:text="@string/modificar"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>