<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OperadorTuristico">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/btnVisualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="visualizar"
            android:text="@string/visualizar"/>
        <Button
            android:id="@+id/btnAdicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="agregar"
            android:text="@string/adicionar"/>
        <Button
            android:id="@+id/btnModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="editar"
            android:text="@string/modificar"/>
        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="borrar"
            android:text="@string/borrar"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>