<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:id="@+id/txtBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:spinnerMode="dialog"
            android:hint="Buscar"/>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/listBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/edit_text"
            android:text="Buscar"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Borrar...."
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>


        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nombre"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"/>

        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:hint="@string/direcci_n"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"/>

        <EditText
            android:id="@+id/txtSitioWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/sitio_web"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"/>
        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/correo_electronico"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"/>
        <EditText
            android:id="@+id/txtTelefonoFijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/telefono_fijo"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"/>

        <EditText
            android:id="@+id/txtCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/celular"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnBorrar"
            android:onClick="borrar"
            android:text="@string/borrar"
            android:background="@drawable/button"/>

    </LinearLayout>

</LinearLayout>