<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".HomeActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sitios_tur_sticos"
        android:onClick="btnSitiosTuristicos"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hoteles"
        android:onClick="btnHoteles" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operadores_turisticos"
        android:onClick="btnOperadores" />

</LinearLayout>


</android.support.constraint.ConstraintLayout>