<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/txtBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textStyle="bold"
            android:spinnerMode="dialog"
            android:hint="Buscar"/>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/listBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            />






        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Visualizar...."
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nombre" />

        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/direcci_n" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TableRow>

            <EditText
            android:id="@+id/txtSitioWeb"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/sitio_web" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/remote_desktop"/>

            </TableRow>
        <TableRow>

        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/correo_electronico" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/email_outline"
                android:onClick="ibtnEmail"/>

        </TableRow>

        <TableRow>
        <EditText
            android:id="@+id/txtTelefonoFijo"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/telefono_fijo" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone_classic"
                android:onClick="ibtnLlamada"/>

        </TableRow>

        <TableRow>

        <EditText
            android:id="@+id/txtCelular"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/celular" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cellphone_basic"
                android:onClick="ibtnCell"/>

        </TableRow>
        </TableLayout>
            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnRegresar"
            android:text="@string/regresar"/>



    </LinearLayout>

</LinearLayout>